WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39194
RTL fixes for multicol layout
https://bugs.webkit.org/show_bug.cgi?id=39194
Summary
RTL fixes for multicol layout
Dave Hyatt
Reported
2010-05-16 20:10:29 PDT
RTL fixes for multicol layout
Attachments
Patch
(10.35 KB, patch)
2010-05-16 20:11 PDT
,
Dave Hyatt
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2010-05-16 20:11:28 PDT
Created
attachment 56207
[details]
Patch
WebKit Review Bot
Comment 2
2010-05-16 20:14:15 PDT
Attachment 56207
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/rendering/RenderBlock.cpp:1601: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] WebCore/rendering/RenderBlock.cpp:3374: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] WebCore/rendering/RenderBlock.cpp:3905: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 3 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2010-05-16 20:15:15 PDT
Comment on
attachment 56207
[details]
Patch
> + if (colCount == 0) > + return;
Should be if (!colCount)
> + if (colCount == 0) > + return false;
Should be if (!colCount)
> + if (colCount == 0) > + return;
Ditto.
Dave Hyatt
Comment 4
2010-05-16 20:35:09 PDT
Fixed in
r59590
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug