https://bugs.webkit.org/show_bug.cgi?id=39194

Reviewed by Dan Bernstein.

Fix all of the multi-column painting and hit testing functions to properly account for RTL directionality.

Added fast/multicol/column-count-with-rules.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintColumnRules):
(WebCore::RenderBlock::paintColumnContents):
(WebCore::RenderBlock::hitTestColumns):
(WebCore::RenderBlock::adjustRectForColumns):



Canonical link: https://commits.webkit.org/50729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59590 268f45cc-cd09-0410-ab3c-d52691b4dbfc